minijinja/tests/snapshots/test_compiler__codegen@coerce.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{{ \"World\"[0] == \"W\" }}\n{{ \"W\" == \"W\" }}\n{{ 1.0 == 1 }}\n{{ 1 != 2 }}\n{{ none == none }}\n{{ none != undefined }}\n{{ undefined == undefined }}\n{{ true == true }}\n{{ 1 == true }}\n{{ 0 == false }}\n{{ 1 != 0 }}\n{{ \"a\" < \"b\" }}\n{{ \"a\"[0] < \"b\" }}\n{{ false < true }}\n{{ 0 < true }}\n{{ [0, 0] == [0, 0] }}\n{{ [\"a\"] == [\"a\"[0]] }}"
input_file: minijinja/tests/inputs/coerce.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst("World")  [line 3],
        00002 | LoadConst(0),
        00003 | GetItem,
        00004 | LoadConst("W"),
        00005 | Eq,
        00006 | Emit,
        00007 | EmitRaw("\n"),
        00008 | LoadConst("W")  [line 4],
        00009 | LoadConst("W"),
        00010 | Eq,
        00011 | Emit,
        00012 | EmitRaw("\n"),
        00013 | LoadConst(1.0)  [line 5],
        00014 | LoadConst(1),
        00015 | Eq,
        00016 | Emit,
        00017 | EmitRaw("\n"),
        00018 | LoadConst(1)  [line 6],
        00019 | LoadConst(2),
        00020 | Ne,
        00021 | Emit,
        00022 | EmitRaw("\n"),
        00023 | LoadConst(none)  [line 7],
        00024 | LoadConst(none),
        00025 | Eq,
        00026 | Emit,
        00027 | EmitRaw("\n"),
        00028 | LoadConst(none)  [line 8],
        00029 | Lookup("undefined"),
        00030 | Ne,
        00031 | Emit,
        00032 | EmitRaw("\n"),
        00033 | Lookup("undefined")  [line 9],
        00034 | Lookup("undefined"),
        00035 | Eq,
        00036 | Emit,
        00037 | EmitRaw("\n"),
        00038 | LoadConst(true)  [line 10],
        00039 | LoadConst(true),
        00040 | Eq,
        00041 | Emit,
        00042 | EmitRaw("\n"),
        00043 | LoadConst(1)  [line 11],
        00044 | LoadConst(true),
        00045 | Eq,
        00046 | Emit,
        00047 | EmitRaw("\n"),
        00048 | LoadConst(0)  [line 12],
        00049 | LoadConst(false),
        00050 | Eq,
        00051 | Emit,
        00052 | EmitRaw("\n"),
        00053 | LoadConst(1)  [line 13],
        00054 | LoadConst(0),
        00055 | Ne,
        00056 | Emit,
        00057 | EmitRaw("\n"),
        00058 | LoadConst("a")  [line 14],
        00059 | LoadConst("b"),
        00060 | Lt,
        00061 | Emit,
        00062 | EmitRaw("\n"),
        00063 | LoadConst("a")  [line 15],
        00064 | LoadConst(0),
        00065 | GetItem,
        00066 | LoadConst("b"),
        00067 | Lt,
        00068 | Emit,
        00069 | EmitRaw("\n"),
        00070 | LoadConst(false)  [line 16],
        00071 | LoadConst(true),
        00072 | Lt,
        00073 | Emit,
        00074 | EmitRaw("\n"),
        00075 | LoadConst(0)  [line 17],
        00076 | LoadConst(true),
        00077 | Lt,
        00078 | Emit,
        00079 | EmitRaw("\n"),
        00080 | LoadConst([0, 0])  [line 18],
        00081 | LoadConst([0, 0]),
        00082 | Eq,
        00083 | Emit,
        00084 | EmitRaw("\n"),
        00085 | LoadConst(["a"])  [line 19],
        00086 | LoadConst("a"),
        00087 | LoadConst(0),
        00088 | GetItem,
        00089 | BuildList(1),
        00090 | Eq,
        00091 | Emit,
    ],
    {},
)
