minijinja/tests/snapshots/test_compiler__codegen@concat.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"a\": \"foo\",\n  \"b\": \"bar\"\n}\n---\n{{ a ~ b }}\n{{ a + b }}\n{{ a[0] + a[1:] }}"
input_file: minijinja/tests/inputs/concat.txt
---
(
    [
        00000 | EmitRaw("{\n  \"a\": \"foo\",\n  \"b\": \"bar\"\n}\n---\n")  [line 1],
        00001 | Lookup("a")  [line 6],
        00002 | Lookup("b"),
        00003 | StringConcat,
        00004 | Emit,
        00005 | EmitRaw("\n"),
        00006 | Lookup("a")  [line 7],
        00007 | Lookup("b"),
        00008 | Add,
        00009 | Emit,
        00010 | EmitRaw("\n"),
        00011 | Lookup("a")  [line 8],
        00012 | LoadConst(0),
        00013 | GetItem,
        00014 | Lookup("a"),
        00015 | LoadConst(1),
        00016 | LoadConst(none),
        00017 | LoadConst(1),
        00018 | Slice,
        00019 | Add,
        00020 | Emit,
    ],
    {},
)
