minijinja/tests/snapshots/test_compiler__codegen@debug.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"upper\": 1\n}\n---\n{% with f = range %}{% for x in f(upper) %}{{ debug() }}{% endfor %}{% endwith %}"
input_file: minijinja/tests/inputs/debug.txt
---
(
    [
        00000 | EmitRaw("{\n  \"upper\": 1\n}\n---\n")  [line 1],
        00001 | PushWith  [line 5],
        00002 | Lookup("range"),
        00003 | StoreLocal("f"),
        00004 | Lookup("upper"),
        00005 | CallFunction("f", 1),
        00006 | PushLoop(1),
        00007 | Iterate(12),
        00008 | StoreLocal("x"),
        00009 | CallFunction("debug", 0),
        00010 | Emit,
        00011 | Jump(7),
        00012 | PopFrame,
        00013 | PopFrame,
    ],
    {},
)
