minijinja/tests/snapshots/test_compiler__codegen@do_closure.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro other_macro() %}23{% endmacro %}\n{% macro foo() %}[{% do other_macro() %}]{% endmacro %}\nShould not show output of other_macro: {{ foo() }}"
input_file: minijinja/tests/inputs/do_closure.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(4)  [line 3],
        00002 | EmitRaw("23"),
        00003 | Return,
        00004 | GetClosure,
        00005 | LoadConst([]),
        00006 | BuildMacro("other_macro", 2, 0),
        00007 | StoreLocal("other_macro"),
        00008 | EmitRaw("\n"),
        00009 | Jump(14)  [line 4],
        00010 | EmitRaw("["),
        00011 | CallFunction("other_macro", 0),
        00012 | EmitRaw("]"),
        00013 | Return,
        00014 | Enclose("other_macro"),
        00015 | GetClosure,
        00016 | LoadConst([]),
        00017 | BuildMacro("foo", 10, 0),
        00018 | StoreLocal("foo"),
        00019 | EmitRaw("\nShould not show output of other_macro: "),
        00020 | CallFunction("foo", 0)  [line 5],
        00021 | Emit,
    ],
    {},
)
