minijinja/tests/snapshots/test_compiler__codegen@err_bad_addition.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{{ [1, 2] + 23 }}"
input_file: minijinja/tests/inputs/err_bad_addition.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst([1, 2])  [line 3],
        00002 | LoadConst(23),
        00003 | Add,
        00004 | Emit,
    ],
    {},
)
