minijinja/tests/snapshots/test_compiler__codegen@err_bad_basic_block.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% extends \"bad_basic_block.txt\" %}\n{% block title %}My Title{% endblock %}"
input_file: minijinja/tests/inputs/err_bad_basic_block.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst("bad_basic_block.txt")  [line 3],
        00002 | LoadBlocks,
        00003 | EmitRaw("\n"),
        00004 | CallBlock("title")  [line 4],
    ],
    {
        "title": [
            00000 | EmitRaw("My Title")  [line 4],
        ],
    },
)
