minijinja/tests/snapshots/test_compiler__codegen@err_bad_block.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% extends \"simple_layout.txt\" %}\n{% block title %}{{ missing_function() }}{% endblock %}"
input_file: minijinja/tests/inputs/err_bad_block.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst("simple_layout.txt")  [line 3],
        00002 | LoadBlocks,
        00003 | EmitRaw("\n"),
        00004 | CallBlock("title")  [line 4],
    ],
    {
        "title": [
            00000 | CallFunction("missing_function", 0)  [line 4],
            00001 | Emit,
        ],
    },
)
