minijinja/tests/snapshots/test_compiler__codegen@err_bad_filter.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% for item in 42|slice(4) %}\n  - {{ item }}\n{% endfor %}"
input_file: minijinja/tests/inputs/err_bad_filter.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst(42)  [line 3],
        00002 | LoadConst(4),
        00003 | ApplyFilter("slice", 2, 0),
        00004 | PushLoop(1),
        00005 | Iterate(12),
        00006 | StoreLocal("item"),
        00007 | EmitRaw("\n  - "),
        00008 | Lookup("item")  [line 4],
        00009 | Emit,
        00010 | EmitRaw("\n"),
        00011 | Jump(5),
        00012 | PopFrame,
    ],
    {},
)
